# lunar-engine

./: .gitignore  CMakeLists.txt  build.sh  install.sh  preview.sh
.docs/: README.md  _sidebar.md  index.html
.docs/api/: audio.md  bitmap.md  color.md  font.md  fonts.md  graphics.md  image.md  input.md  kernel.md  rect2f.md  rect2i.md  sprite.md  texture.md  textures.md  vector2f.md  vector2i.md
.opencode/skills/: api-docs-conventions.md
.opencode/skills/api-docs-conventions/: SKILL.md
assets/: game.cfg
include/Engine/bindings/: r_audio.h  r_bitmap.h  r_color.h  r_font.h  r_fonts.h  r_fonts_cache.h  r_graphics.h  r_graphics_cache.h  r_image.h  r_input.h  r_kernel.h  r_rect_float.h  r_rect_int.h  r_sprite.h  r_texture.h  r_textures.h  r_types.h  r_values.h  r_vector_float.h  r_vector_int.h
include/Engine/core/: bitmap.h  color.h  font.h  image.h  rect.h  rect.tpp  render.h  sprite.h  texture.h  vector.h  vector.tpp
include/Engine/interfaces/: disposable.h  renderable.h
include/Engine/resources/: font_loader.h  font_manager.h  fonts_cache.h  fonts_loader.h  graphics_cache.h  graphics_loader.h  image_manager.h  ruby_loader.h  settings.h  settings_loader.h  texture_loader.h  texture_manager.h
include/Engine/singletons/: canvas.h  debug.h  environment.h  interpreter.h  interpreter.hpp  process.h  project.h  renderer.h  room.h  runtime.h  scene.h  timestamp.h
include/Engine/utils/: boolean.h  debug.h  debug.hpp  files.h  integer.h  path.h  paths.h  ruby.h  string.h  strings.h
src/: main.cpp
src/bindings/: r_audio.cpp  r_bitmap.cpp  r_color.cpp  r_font.cpp  r_fonts.cpp  r_fonts_cache.cpp  r_graphics.cpp  r_graphics_cache.cpp  r_image.cpp  r_input.cpp  r_kernel.cpp  r_rect_float.cpp  r_rect_int.cpp  r_sprite.cpp  r_texture.cpp  r_textures.cpp  r_types.cpp  r_values.cpp  r_vector_float.cpp  r_vector_int.cpp
src/core/: bitmap.cpp  color.cpp  font.cpp  image.cpp  render.cpp  sprite.cpp  texture.cpp
src/interfaces/: disposable.cpp  renderable.cpp
src/resources/: font_loader.cpp  font_manager.cpp  fonts_cache.cpp  fonts_loader.cpp  graphics_cache.cpp  graphics_loader.cpp  image_manager.cpp  ruby_loader.cpp  settings_loader.cpp  texture_loader.cpp  texture_manager.cpp
src/singletons/: canvas.cpp  debug.cpp  environment.cpp  interpreter.cpp  process.cpp  project.cpp  renderer.cpp  room.cpp  runtime.cpp  scene.cpp  timestamp.cpp
src/utils/: boolean.cpp  files.cpp  integer.cpp  path.cpp  paths.cpp  ruby.cpp  string.cpp  strings.cpp
templates/: game.cfg
